--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "^4.10.1",
     "lodash": "^2.4.1",
     "mocha": "^1.21.4",
+    "mongodb": "^2.0.47",
     "morgan": "^1.4.1",
     "mysql": "^2.4.2",
     "request": "^2.40.0",
